--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "clear": "expo start --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -13,6 +14,8 @@
     "@expo-google-fonts/noto-serif": "^0.2.2",
     "@expo-google-fonts/noto-serif-display": "^0.2.2",
     "@expo-google-fonts/source-serif-4": "^0.2.2",
+    "@likashefqet/react-native-image-zoom": "^1.2.1",
+    "@openspacelabs/react-native-zoomable-view": "^2.0.4",
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -26,8 +29,11 @@
     "react-native": "0.68.2",
     "react-native-collapsible": "^1.6.0",
     "react-native-gesture-handler": "^2.2.1",
+    "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-interactive-image": "^0.1.0",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
